# conda-npm

./: LICENSE  README.md  environment.yml  pyproject.toml
conda_npm/: plugin.py
