[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-npm"
version = "0.1.0"
description = "conda-npm"
requires-python = ">=3.7"
dependencies = ["conda", "conda-lock", "ruamel.yaml"]

[project.entry-points.conda]
conda-npm = "conda_npm.plugin"
